# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")

module_output_path = "datamgr_service/datamgr_service/distributeddataservice"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${data_service_path}/adapter/include/permission",
    "${data_service_path}/adapter/include/account",
    "${data_service_path}/adapter/include",
    "${data_service_path}/adapter/include/utils",
    "${data_service_path}/framework/include",
    "${data_service_path}/service/bootstrap/include",
    "${data_service_path}/service/common",
    "${data_service_path}/service/config/include",
    "${data_service_path}/service/crypto/include",
    "${data_service_path}/service/data_share/common",
    "${data_service_path}/service/directory/include",
    "${data_service_path}/service/permission/include",
    "${data_service_path}/service/matrix/include",
    "${data_service_path}/app/src",
    "${data_service_path}/app/src/session_manager",
    "${data_service_path}/service/kvdb",
    "${data_service_path}/service/test/mock",
    "${data_service_path}/framework/test/mock",
    "../include",
    "../src",
    "../src/security",
    "unittest",
    "../src/installer",
    "../../service/backup/include",
    "../../../../interfaces/innerkits/distributeddata",
    "../../service/dumper/include",
    "${data_service_path}/adapter/include/communicator",
  ]

  if (datamgr_service_power) {
    include_dirs +=
        [ "//base/powermgr/power_manager/interfaces/innerkits/native/include" ]
  }
  cflags = [
    "-Werror",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  ldflags = [ "-Wl,--whole-archive" ]
  defines = [
    "TEST_ON_DEVICE",
    "OPENSSL_SUPPRESS_DEPRECATED",
  ]
}

ohos_unittest("KvStoreDataServiceTest") {
  module_out_path = module_output_path
  sources = [
    "${data_service_path}/app/src/checker/bundle_checker.cpp",
    "${data_service_path}/app/src/checker/system_checker.cpp",
    "${data_service_path}/app/src/clone/clone_backup_info.cpp",
    "${data_service_path}/app/src/clone/secret_key_backup_data.cpp",
    "${data_service_path}/app/src/db_info_handle_impl.cpp",
    "${data_service_path}/app/src/feature_stub_impl.cpp",
    "${data_service_path}/app/src/installer/installer.cpp",
    "${data_service_path}/app/src/installer/installer_impl.cpp",
    "${data_service_path}/app/src/kvstore_account_observer.cpp",
    "${data_service_path}/app/src/kvstore_data_service.cpp",
    "${data_service_path}/app/src/kvstore_data_service_stub.cpp",
    "${data_service_path}/app/src/kvstore_device_listener.cpp",
    "${data_service_path}/app/src/kvstore_meta_manager.cpp",
    "${data_service_path}/app/src/kvstore_screen_observer.cpp",
    "${data_service_path}/app/src/security/security.cpp",
    "${data_service_path}/app/src/security/sensitive.cpp",
    "${data_service_path}/app/src/session_manager/route_head_handler_impl.cpp",
    "${data_service_path}/app/src/session_manager/session_manager.cpp",
    "${data_service_path}/app/src/session_manager/upgrade_manager.cpp",
    "${data_service_path}/app/src/task_manager.cpp",
    "${data_service_path}/app/test/unittest/kvstore_data_service_test.cpp",
    "${data_service_path}/app/test/unittest/security_test.cpp",
    "${data_service_path}/app/test/unittest/sensitive_test.cpp",
    "${data_service_path}/service/common/xcollie.cpp",
  ]

  sanitize = {
    ubsan = true
    boundary_sanitize = true
    integer_overflow = true
    cfi_no_nvcall = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${datamgr_service_path}/cfi_blocklist.txt"
  }

  configs = [ ":module_private_config" ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "device_auth:deviceauth_sdk",
    "file_api:securitylabel",
    "googletest:gtest_main",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "kv_store:kvdb_inner_lite",
    "memmgr:memmgrclient",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (dataclassification_part_is_enabled && datamgr_service_distributed) {
    external_deps += [ "dataclassification:data_transit_mgr", ]
  }

  if (datamgr_service_power) {
    external_deps += [
      "battery_manager:batterysrv_client",
      "power_manager:powermgr_client",
    ]
  }

  deps = [
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
  ]
  part_name = "datamgr_service"
}

ohos_unittest("KvStoreDataServiceMockTest") {
  module_out_path = module_output_path
  sources = [
    "${data_service_path}/app/src/checker/bundle_checker.cpp",
    "${data_service_path}/app/src/checker/system_checker.cpp",
    "${data_service_path}/app/src/clone/clone_backup_info.cpp",
    "${data_service_path}/app/src/clone/secret_key_backup_data.cpp",
    "${data_service_path}/app/src/db_info_handle_impl.cpp",
    "${data_service_path}/app/src/feature_stub_impl.cpp",
    "${data_service_path}/app/src/installer/installer.cpp",
    "${data_service_path}/app/src/installer/installer_impl.cpp",
    "${data_service_path}/app/src/kvstore_account_observer.cpp",
    "${data_service_path}/app/src/kvstore_data_service.cpp",
    "${data_service_path}/app/src/kvstore_data_service_stub.cpp",
    "${data_service_path}/app/src/kvstore_device_listener.cpp",
    "${data_service_path}/app/src/kvstore_meta_manager.cpp",
    "${data_service_path}/app/src/kvstore_screen_observer.cpp",
    "${data_service_path}/app/src/security/security.cpp",
    "${data_service_path}/app/src/security/sensitive.cpp",
    "${data_service_path}/app/src/session_manager/route_head_handler_impl.cpp",
    "${data_service_path}/app/src/session_manager/session_manager.cpp",
    "${data_service_path}/app/src/session_manager/upgrade_manager.cpp",
    "${data_service_path}/app/src/task_manager.cpp",
    "${data_service_path}/app/test/unittest/kvstore_data_service_mock_test.cpp",
    "${data_service_path}/service/common/xcollie.cpp",
    "${data_service_path}/service/test/mock/access_token_mock.cpp", 
  ]
  include_dirs = [
    "${data_service_path}/service/test/mock",
  ]
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    integer_overflow = true
    cfi_no_nvcall = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${datamgr_service_path}/cfi_blocklist.txt"
  }

  configs = [ ":module_private_config" ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "device_auth:deviceauth_sdk",
    "file_api:securitylabel",
    "googletest:gtest_main",
    "googletest:gmock",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "memmgr:memmgrclient",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (dataclassification_part_is_enabled && datamgr_service_distributed) {
    external_deps += [ "dataclassification:data_transit_mgr", ]
  }

  if (datamgr_service_power) {
    external_deps += [
      "battery_manager:batterysrv_client",
      "power_manager:powermgr_client",
    ]
  }

  deps = [
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
  ]
  part_name = "datamgr_service"
}

ohos_unittest("KvStoreMetaManagerUpdateKeyTest") {
  module_out_path = module_output_path
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${datamgr_service_path}/cfi_blocklist.txt"
  }
  sources = [
    "${data_service_path}/app/src/checker/bundle_checker.cpp",
    "${data_service_path}/app/src/checker/system_checker.cpp",
    "${data_service_path}/app/src/clone/clone_backup_info.cpp",
    "${data_service_path}/app/src/clone/secret_key_backup_data.cpp",
    "${data_service_path}/app/src/db_info_handle_impl.cpp",
    "${data_service_path}/app/src/feature_stub_impl.cpp",
    "${data_service_path}/app/src/installer/installer.cpp",
    "${data_service_path}/app/src/installer/installer_impl.cpp",
    "${data_service_path}/app/src/kvstore_account_observer.cpp",
    "${data_service_path}/app/src/kvstore_data_service.cpp",
    "${data_service_path}/app/src/kvstore_data_service_stub.cpp",
    "${data_service_path}/app/src/kvstore_device_listener.cpp",
    "${data_service_path}/app/src/kvstore_meta_manager.cpp",
    "${data_service_path}/app/src/kvstore_screen_observer.cpp",
    "${data_service_path}/app/src/security/security.cpp",
    "${data_service_path}/app/src/security/sensitive.cpp",
    "${data_service_path}/app/src/session_manager/route_head_handler_impl.cpp",
    "${data_service_path}/app/src/session_manager/session_manager.cpp",
    "${data_service_path}/app/src/session_manager/upgrade_manager.cpp",
    "${data_service_path}/app/src/task_manager.cpp",
    "${data_service_path}/app/test/unittest/kvstore_meta_manager_update_key_test.cpp",
    "${data_service_path}/service/common/xcollie.cpp",
    "${data_service_path}/service/test/mock/device_manager_adapter_mock.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "device_auth:deviceauth_sdk",
    "file_api:securitylabel",
    "googletest:gmock",
    "googletest:gtest_main",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "kv_store:kvdb_inner_lite",
    "memmgr:memmgrclient",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (dataclassification_part_is_enabled && datamgr_service_distributed) {
    external_deps += [ "dataclassification:data_transit_mgr", ]
  }

  if (datamgr_service_power) {
    external_deps += [
      "battery_manager:batterysrv_client",
      "power_manager:powermgr_client",
    ]
  }
  cflags = [
    "-fno-access-control",  # Ignore Private Member Access Control
  ]
  deps = [
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
  ]
  part_name = "datamgr_service"
}

ohos_unittest("SessionManagerTest") {
  module_out_path = module_output_path

  sources = [
    "../src/kvstore_meta_manager.cpp",
    "../src/session_manager/route_head_handler_impl.cpp",
    "../src/session_manager/session_manager.cpp",
    "../src/session_manager/upgrade_manager.cpp",
    "unittest/session_manager_test.cpp",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${datamgr_service_path}/cfi_blocklist.txt"
  }

  cflags_cc = [ "-DUT_TEST" ]
  configs = [ ":module_private_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "device_auth:deviceauth_sdk",
    "file_api:securitylabel",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "kv_store:kvdb_inner_lite",
    "safwk:system_ability_fwk",
  ]

  if (datamgr_service_power) {
    external_deps += [
      "battery_manager:batterysrv_client",
      "power_manager:powermgr_client",
    ]
  }

  deps = [
    "${data_service_path}/adapter/utils:distributeddata_utils",
    "${data_service_path}/app/src/checker:distributeddata_checker",
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
    "${data_service_path}/service/test/mock:distributeddata_mock_static",
  ]

  part_name = "datamgr_service"
}

ohos_unittest("KvStoreDataServiceClearTest") {
  module_out_path = module_output_path
  sources = [
    "${data_service_path}/app/src/clone/clone_backup_info.cpp",
    "${data_service_path}/app/src/clone/secret_key_backup_data.cpp",
    "${data_service_path}/app/src/db_info_handle_impl.cpp",
    "${data_service_path}/app/src/feature_stub_impl.cpp",
    "${data_service_path}/app/src/kvstore_account_observer.cpp",
    "${data_service_path}/app/src/kvstore_data_service.cpp",
    "${data_service_path}/app/src/kvstore_data_service_stub.cpp",
    "${data_service_path}/app/src/kvstore_device_listener.cpp",
    "${data_service_path}/app/src/kvstore_meta_manager.cpp",
    "${data_service_path}/app/src/kvstore_screen_observer.cpp",
    "${data_service_path}/app/src/security/security.cpp",
    "${data_service_path}/app/src/security/sensitive.cpp",
    "${data_service_path}/app/src/session_manager/route_head_handler_impl.cpp",
    "${data_service_path}/app/src/session_manager/session_manager.cpp",
    "${data_service_path}/app/src/session_manager/upgrade_manager.cpp",
    "${data_service_path}/app/src/task_manager.cpp",
    "${data_service_path}/service/common/xcollie.cpp",
    "unittest/kvstore_data_service_clear_test.cpp",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [ ":module_private_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "device_auth:deviceauth_sdk",
    "file_api:securitylabel",
    "googletest:gtest_main",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "kv_store:kvdb_inner_lite",
    "memmgr:memmgrclient",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (dataclassification_part_is_enabled && datamgr_service_distributed) {
    external_deps += [ "dataclassification:data_transit_mgr", ]
  }

  if (datamgr_service_power) {
    external_deps += [
      "battery_manager:batterysrv_client",
      "power_manager:powermgr_client",
    ]
  }

  deps = [
    "${data_service_path}/adapter/utils:distributeddata_utils",
    "${data_service_path}/app/src/checker:distributeddata_checker",
    "${data_service_path}/app/src/installer:distributeddata_installer",
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
  ]

  part_name = "datamgr_service"
}

ohos_unittest("FeatureStubImplTest") {
  module_out_path = module_output_path

  include_dirs = [
    "${data_service_path}/adapter/include/permission",
    "${data_service_path}/adapter/include/account",
    "${data_service_path}/adapter/include",
    "${data_service_path}/adapter/include/utils",
    "${data_service_path}/framework/include",
    "${data_service_path}/service/bootstrap/include",
    "${data_service_path}/service/common",
    "${data_service_path}/service/config/include",
    "${data_service_path}/service/crypto/include",
    "${data_service_path}/service/directory/include",
    "${data_service_path}/service/permission/include",
    "${data_service_path}/service/matrix/include",
    "${data_service_path}/app/src/session_manager",
    "${data_service_path}/app/src",
    "${data_service_path}/service/kvdb",
  ]

  sources = [
    "${data_service_path}/app/src/feature_stub_impl.cpp",
    "unittest/feature_stub_impl_test.cpp",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "device_auth:deviceauth_sdk",
    "file_api:securitylabel",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "safwk:system_ability_fwk",
  ]

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  if (datamgr_service_power) {
    external_deps += [
      "battery_manager:batterysrv_client",
      "power_manager:powermgr_client",
    ]
  }

  deps = [
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service/bootstrap:distributeddata_bootstrap",
  ]
  part_name = "datamgr_service"
}

ohos_unittest("UpgradeManagerTest") {
  module_out_path = module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  include_dirs = [
    "${data_service_path}/app/src/session_manager",
    "${data_service_path}/app/test/mock/capability",
    "${data_service_path}/framework/include",
  ]

  sources = [
    "${data_service_path}/app/test/mock/capability/metadata/meta_data_manager.cpp",
    "${data_service_path}/app/test/mock/capability/device_manager_adapter.cpp",
    "${data_service_path}/app/src/session_manager/upgrade_manager.cpp",
    "${data_service_path}/framework/metadata/capability_meta_data.cpp",
    "${data_service_path}/framework/serializable/serializable.cpp",
    "${data_service_path}/framework/utils/anonymous.cpp",
    "${data_service_path}/framework/utils/constant.cpp",
    "${data_service_path}/app/test/unittest/upgrade_manager_test.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "json:nlohmann_json_static",
    "kv_store:distributeddata_inner",
  ]

  part_name = "datamgr_service"
}

ohos_unittest("RouteHeadHandlerImplTest") {
  module_out_path = module_output_path

  include_dirs = [
    "${data_service_path}/adapter/include/permission",
    "${data_service_path}/adapter/include/account",
    "${data_service_path}/adapter/include",
    "${data_service_path}/adapter/include/utils",
    "${data_service_path}/framework/include",
    "${data_service_path}/service/bootstrap/include",
    "${data_service_path}/service/common",
    "${data_service_path}/service/config/include",
    "${data_service_path}/service/crypto/include",
    "${data_service_path}/service/data_share/common",
    "${data_service_path}/service/directory/include",
    "${data_service_path}/service/permission/include",
    "${data_service_path}/service/matrix/include",
    "${data_service_path}/app/src",
    "${data_service_path}/app/src/session_manager",
    "${data_service_path}/service/kvdb",
    "${data_service_path}/service/test/mock",
    "../include",
    "../src",
    "../src/security",
    "unittest",
    "../src/installer",
    "../../service/backup/include",
    "../../../../interfaces/innerkits/distributeddata",
    "../../service/dumper/include",
    "${data_service_path}/adapter/include/communicator",
    "${data_service_path}/framework/test/mock",
  ]

  sources = [
    "../src/kvstore_meta_manager.cpp",
    "../src/session_manager/route_head_handler_impl.cpp",
    "../src/session_manager/session_manager.cpp",
    "../src/session_manager/upgrade_manager.cpp",
    "unittest/route_head_handler_impl_test.cpp",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${datamgr_service_path}/cfi_blocklist.txt"
  }

  cflags_cc = [ "-DUT_TEST" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "device_auth:deviceauth_sdk",
    "file_api:securitylabel",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "safwk:system_ability_fwk",
  ]

  if (datamgr_service_power) {
    external_deps += [
      "battery_manager:batterysrv_client",
      "power_manager:powermgr_client",
    ]
  }

  deps = [
    "${data_service_path}/adapter/utils:distributeddata_utils",
    "${data_service_path}/app/src/checker:distributeddata_checker",
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
    "${data_service_path}/service/test/mock:distributeddata_mock_static",
  ]
  
  cflags = [
    "-Werror",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  ldflags = [ "-Wl,--whole-archive" ]
  defines = [
    "TEST_ON_DEVICE",
    "OPENSSL_SUPPRESS_DEPRECATED",
  ]

  part_name = "datamgr_service"
}

ohos_unittest("BundleCheckerTest") {
  module_out_path = module_output_path
  sources = [ "unittest/bundle_checker_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "openssl:libcrypto_shared",
  ]

  deps = [
    "${data_service_path}/app/src/checker:distributeddata_checker",
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
  ]
}

ohos_unittest("DDMSDumpTest") {
  module_out_path = module_output_path
  sources = [
    "${data_service_path}/app/src/checker/bundle_checker.cpp",
    "${data_service_path}/app/src/checker/system_checker.cpp",
    "${data_service_path}/app/src/clone/clone_backup_info.cpp",
    "${data_service_path}/app/src/clone/secret_key_backup_data.cpp",
    "${data_service_path}/app/src/db_info_handle_impl.cpp",
    "${data_service_path}/app/src/feature_stub_impl.cpp",
    "${data_service_path}/app/src/installer/installer.cpp",
    "${data_service_path}/app/src/installer/installer_impl.cpp",
    "${data_service_path}/app/src/kvstore_account_observer.cpp",
    "${data_service_path}/app/src/kvstore_data_service.cpp",
    "${data_service_path}/app/src/kvstore_data_service_stub.cpp",
    "${data_service_path}/app/src/kvstore_device_listener.cpp",
    "${data_service_path}/app/src/kvstore_meta_manager.cpp",
    "${data_service_path}/app/src/kvstore_screen_observer.cpp",
    "${data_service_path}/app/src/security/security.cpp",
    "${data_service_path}/app/src/security/sensitive.cpp",
    "${data_service_path}/app/src/session_manager/route_head_handler_impl.cpp",
    "${data_service_path}/app/src/session_manager/session_manager.cpp",
    "${data_service_path}/app/src/session_manager/upgrade_manager.cpp",
    "${data_service_path}/app/src/task_manager.cpp",
    "${data_service_path}/app/test/unittest/ddms_dump_test.cpp",
    "${data_service_path}/framework/test/mock/account_delegate_mock.cpp",
    "${data_service_path}/service/test/mock/db_store_mock.cpp",
    "${data_service_path}/service/test/mock/db_change_data_mock.cpp",
    "${data_service_path}/service/test/mock/device_manager_adapter_mock.cpp",
  ]
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    integer_overflow = true
    debug = false
    blocklist = "${datamgr_service_path}/cfi_blocklist.txt"
  }

  configs = [ ":module_private_config" ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "device_auth:deviceauth_sdk",
    "file_api:securitylabel",
    "googletest:gmock",
    "googletest:gtest_main",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_core",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "memmgr:memmgrclient",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (dataclassification_part_is_enabled && datamgr_service_distributed) {
    external_deps += [ "dataclassification:data_transit_mgr", ]
  }

  deps = [
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
  ]
  part_name = "datamgr_service"
}
###############################################################################

group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":FeatureStubImplTest",
    ":SessionManagerTest",
    ":UpgradeManagerTest",
    ":RouteHeadHandlerImplTest",
  ]

  if (dataclassification_part_is_enabled && datamgr_service_distributed) {
    deps += [
      ":KvStoreDataServiceMockTest",
      ":KvStoreDataServiceTest",
      ":BundleCheckerTest",
      ":DDMSDumpTest",
      ":KvStoreMetaManagerUpdateKeyTest",
      ":KvStoreDataServiceClearTest",
    ]
  }
}
